--- a/stm32-bme280-i2c.ioc
+++ b/stm32-bme280-i2c.ioc
@@ -17,8 +17,8 @@ Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PB3
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
+Mcu.Pin11=PB8
+Mcu.Pin12=PB9
 Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0-OSC_IN
@@ -73,14 +73,16 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PB6.GPIOParameters=GPIO_Pu
-PB6.GPIO_Pu=GPIO_PULLUP
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.GPIOParameters=GPIO_Pu
-PB7.GPIO_Pu=GPIO_PULLUP
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
+PB8.GPIOParameters=GPIO_Pu
+PB8.GPIO_Pu=GPIO_PULLUP
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Pu
+PB9.GPIO_Pu=GPIO_PULLUP
+PB9.Locked=true
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -130,7 +132,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
